--- a/movie_recommendation.ui
+++ b/movie_recommendation.ui
@@ -45,28 +45,13 @@
      <pointsize>20</pointsize>
     </font>
    </property>
-   <item>
-    <property name="text">
-     <string>영화1</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>영화2</string>
-    </property>
-   </item>
-   <item>
-    <property name="text">
-     <string>영화3</string>
-    </property>
-   </item>
   </widget>
   <widget class="QLineEdit" name="le_keyword">
    <property name="geometry">
     <rect>
      <x>30</x>
      <y>180</y>
-     <width>451</width>
+     <width>601</width>
      <height>61</height>
     </rect>
    </property>
@@ -75,13 +60,16 @@
      <pointsize>20</pointsize>
     </font>
    </property>
+   <property name="placeholderText">
+    <string>제목이나 key word를 입력하세요</string>
+   </property>
   </widget>
   <widget class="QPushButton" name="btn_recommendation">
    <property name="geometry">
     <rect>
-     <x>520</x>
+     <x>650</x>
      <y>180</y>
-     <width>381</width>
+     <width>241</width>
      <height>61</height>
     </rect>
    </property>
